--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 theme: jekyll-theme-minimal
 title: DataPandas Website
 description: A website for ADA
-show_downloads: True
+show_downloads: False
 navigation:
   - title: Home
     url: /
-  - title: Example
-    url: example
